# scengen

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  UPGRADING.md  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-app.yml
docu/: UML.drawio
scengen/: __init__.py  __main__.py  cli.py  estimator.py  evaluator.py  files.py  generator.py  logs.py  misc.py  runner.py  workflow.py
scengen/generation/: check.py  digest.py  generator.py  misc.py
scengen/generator/: check.py  digest.py  misc.py  scenario_generator.py
tests/: test_cli.py  test_generator.py  test_misc.py
